--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
     <title>Guess the button</title>
     <link rel="stylesheet" href="style.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
 </head>
 
 <body>
@@ -24,7 +28,7 @@
         <button onclick="return dispayButtons()" id="btn1">Hit me!</button>
         <button onClick="window.location.reload();" id="btn2">Refresh</button>
     </div>
-    <div id="buttonList" class="container btn-block animatebutton shake">
+    <div id="buttonList" class="container">
         <div class="container">
             <br>
         </div>
